# tartancalib

./: .gitignore  Dockerfile_ros1_18_04  Dockerfile_ros1_18_04_small.dockerfile  Dockerfile_ros1_20_04  LICENSE.tartancalib  README.md  run_all.py
.github/workflows/: docker_1804_build.yaml
aslam_cv/aslam_cameras/include/aslam/cameras/: CameraGeometry.hpp  CameraGeometryBase.hpp  DoubleSphereProjection.hpp  GridCalibrationTargetBase.hpp  GridDetector.hpp  OmniProjection.hpp
aslam_cv/aslam_cameras/include/aslam/cameras/implementation/: CameraGeometry.hpp  DoubleSphereProjection.hpp  OmniProjection.hpp
aslam_cv/aslam_cameras/src/: CameraGeometryBase.cpp  GridDetector.cpp
aslam_cv/aslam_cameras_april/: CMakeLists.txt  package.xml
aslam_cv/aslam_cameras_april/include/aslam/cameras/: GridCalibrationTargetAprilgrid.hpp
aslam_cv/aslam_cameras_april/src/: GridCalibrationTargetAprilgrid.cpp
aslam_cv/aslam_cv_backend/include/aslam/backend/: CameraDesignVariable.hpp
aslam_cv/aslam_cv_backend/include/aslam/backend/implementation/: CameraDesignVariable.hpp
aslam_cv/aslam_cv_python/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_python/deltille/deltille/: DetectorParams.h  DetectorTools.cpp  DetectorTools.h  PolynomialFit.h  PolynomialSaddleDetectorContext.h  TagFamily.h  deltille.cc
aslam_cv/aslam_cv_python/libvis/src/libvis/: image.h
aslam_cv/aslam_cv_python/src/: CameraGeometry.cpp  GridCalibration.cpp  module.cpp  tartancalibworker_.cpp
aslam_cv/aslam_cv_serialization/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_serialization/include/aslam/cameras/: CameraBaseSerialization.hpp
aslam_cv/aslam_imgproc/: setup.py
aslam_cv/tartan_calib/: CMakeLists copy.txt  CMakeLists.txt  log.txt  package.xml
aslam_cv/tartan_calib/include/aslam/: TartanCalibWorker.hpp  catkin_ws.code-workspace
aslam_cv/tartan_calib/include/aslam/implementation/: Datasetwriterhelper.hpp  TartanCalibWorker.hpp  symmetry_fit.h  symmetry_refinement.h  tartan_refinement.h  terminal.txt
aslam_incremental_calibration/incremental_calibration/src/core/: IncrementalEstimator.cpp
aslam_offline_calibration/deltille/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
aslam_offline_calibration/deltille/apps/: CMakeLists.txt  DeltilleDetector.cpp
aslam_offline_calibration/deltille/cmake/: mexmat.cmake
aslam_offline_calibration/deltille/include/deltille/: DetectorParams.h  DetectorTools.h  GrayModel.h  GridDetectorContext.h  PolynomialFit.h  PolynomialSaddleDetectorContext.h  Quadangle.h  TagFamily.h  TaggedBoardIndexer.h  Triangle.h  target_detector.h  utils.h
aslam_offline_calibration/deltille/include/deltille/apriltags/: Tag16h5.h  Tag16h5_other.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  Tag36h11_other.h  Tag36h9.h
aslam_offline_calibration/deltille/matlab/: CMakeLists.txt  SyntheticCornerGenerator.m  SyntheticExperiements.m  TargetDetector.m  deltille_detector_mex.cc  detectCalibrationBoards.m  detect_calib_boards_mex.cc  generateRectangularImage.m  generateTriangularImage.m  randrange.m  runSyntheticExperiments.m  run_simulation_noise.m  saddle_subpix_refinement_mex.cc  startup.m
aslam_offline_calibration/deltille/src/: CMakeLists.txt  DetectorTools.cpp  PolynomialFit.cpp  TagFamily.cpp  TaggedBoardIndexer.cpp  utils.cpp
aslam_offline_calibration/ethz_apriltag2/: CMakeLists.txt
aslam_offline_calibration/ethz_apriltag2/include/apriltags/: TagDetector.h
aslam_offline_calibration/ethz_apriltag2/src/: TagDetector.cc
aslam_offline_calibration/kalibr/: CMakeLists.txt  setup.py
aslam_offline_calibration/kalibr/python/: tartan_analyze  tartan_annotate  tartan_calibrate  tartan_polars  tartan_polars_table  tartan_visualize
aslam_offline_calibration/kalibr/python/kalibr_camera_calibration/: CameraCalibrator.py  ObsDb.py
aslam_offline_calibration/kalibr/python/kalibr_common/: ConfigReader.py  ImageDatasetReader.py  TargetExtractor.py
aslam_offline_calibration/kalibr/python/tartan_logging/: TartanLogging.py  __init__.py
aslam_optimizer/aslam_backend/include/aslam/backend/: MEstimatorPolicies.hpp
aslam_optimizer/aslam_backend/src/: MEstimatorPolicies.cpp
aslam_optimizer/aslam_backend_python/src/: MEstimators.cpp
