<?xml version="1.0"?>
<package>
    <name>tartan_calib</name>
    <version>0.0.1</version>
    <description>tartan calib</description>
    <maintainer email="bduister@andrew.cmu.edu">Bardienus Duisterhof</maintainer>
    <license>New BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>boost</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>sm_common</build_depend>
    <build_depend>sm_eigen</build_depend>
    <build_depend>sm_logging</build_depend>
    <build_depend>sm_boost</build_depend>
    <build_depend>sm_kinematics</build_depend>
    <build_depend>sm_opencv</build_depend>
    <build_depend>opencv2_catkin</build_depend>
    <build_depend>aslam_cameras</build_depend>
    <build_depend>aslam_time</build_depend>
    <build_depend>ethz_apriltag2</build_depend>
    <build_depend>aslam_cameras_april</build_depend>
</package>


